--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -6,6 +6,9 @@
     <div class="button-group">
       <button class="button" [class.active]="(activeTab$ | async) === 'transfer'" (click)="navigateToTransfer()">Transfer</button>
     </div>
+    <div class="button-group">
+      <button class="button" [class.active]="(activeTab$ | async) === 'newTransfer'" (click)="navigateToNewTransfer()">New Transfer</button>
+    </div>
   </div>
   <div class="card" style="width: 600px; height: 620px; padding: 20px;">
     <div class="card__header">
