--- a/src/app/transfer/transfer.component.html
+++ b/src/app/transfer/transfer.component.html
@@ -6,6 +6,10 @@
     <div class="button-group">
       <button class="button" [class.active]="(activeTab$ | async) === 'transfer'" (click)="navigateToTransfer()">Transfer</button>
     </div>
+
+    <div class="button-group">
+      <button class="button" [class.active]="(activeTab$ | async) === 'newTransfer'" (click)="navigateToNewTransfer()">New Transfer</button>
+    </div>
   </div>
   
   <div class="card" style="width: 600px; height: 650px;">
