--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -48,7 +48,7 @@
         </div>
       </div>
 
-      <button type="submit" class="confirm-payment" style="height: 30px; font-size: 0.8rem; width: calc(100% - 10px); margin-top: 15px;">Confirm payment</button>
+      <button type="submit" class="confirm-payment" style="height: 30px; font-size: 0.8rem; width: calc(100% - 10px); margin-top: 15px;" (click)="initiatePayStack()">Confirm payment</button>
     </form>
     <div class="verify-info" style="margin-top: 15px;">
       <small style="font-size: 0.7rem;">Verify the information is correct</small>
