--- a/src/app/new-transfer/new-transfer.component.scss
+++ b/src/app/new-transfer/new-transfer.component.scss
@@ -1,137 +1,9 @@
-// .payment-modal {
-//     font-family: Arial, sans-serif;
-//     background: #fff;
-//     padding: 20px;
-//     border-radius: 20px;
-//     width: 400px;
-//     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-//   }
-  
-//   .header {
-//     display: flex;
-//     justify-content: space-between;
-//     align-items: center;
-//     margin-bottom: 20px;
-//   }
-  
-//   .header h3 {
-//     font-size: 16px;
-//     color: #333;
-//   }
-  
-//   .close-button {
-//     background: none;
-//     border: none;
-//     font-size: 14px;
-//     color: #999;
-//     cursor: pointer;
-//   }
-  
-//   .payment-details {
-//     margin-bottom: 20px;
-//     text-align: center;
-//   }
-  
-//   .payment-details h4 {
-//     font-size: 14px;
-//     color: #666;
-//   }
-  
-//   .payment-details .amount {
-//     font-size: 24px;
-//     font-weight: bold;
-//     color: #000;
-//     margin: 10px 0;
-//   }
-  
-//   .payment-details p {
-//     font-size: 12px;
-//     color: #666;
-//   }
-  
-//   .transfer-details {
-//     margin-bottom: 20px;
-//   }
-  
-//   .transfer-details h5 {
-//     font-size: 14px;
-//     color: #333;
-//     margin-bottom: 10px;
-//   }
-  
-//   .bank-details {
-//     background: #f9f9f9;
-//     padding: 10px;
-//     border-radius: 8px;
-//     text-align: center;
-//     margin-bottom: 10px;
-//   }
-  
-//   .bank-details .bank-name {
-//     font-size: 14px;
-//     font-weight: bold;
-//     color: #333;
-//   }
-  
-//   .bank-details .account-number {
-//     font-size: 18px;
-//     font-weight: bold;
-//     color: #000;
-//   }
-  
-//   .bank-details .account-note {
-//     font-size: 12px;
-//     color: #ff0000;
-//   }
-  
-//   .bank-details .account-name {
-//     font-size: 12px;
-//     color: #666;
-//   }
-  
-//   .bank-details .expiration span {
-//     color: #ff6600;
-//   }
-  
-//   .ussd-code {
-//     display: block;
-//     margin: 0 auto;
-//     background: #f1f1f1;
-//     color: #333;
-//     border: none;
-//     border-radius: 5px;
-//     padding: 10px;
-//     font-size: 14px;
-//     cursor: pointer;
-//     margin-top: 10px;
-//   }
-  
-//   .action-button {
-//     text-align: center;
-//   }
-  
-//   .confirm-button {
-//     background: #ff9800;
-//     color: #fff;
-//     border: none;
-//     border-radius: 5px;
-//     padding: 10px 20px;
-//     font-size: 16px;
-//     cursor: pointer;
-//   }
-  
-//   footer {
-//     text-align: center;
-//     margin-top: 10px;
-//     font-size: 12px;
-//     color: #666;
-//   }
 
   .button-group {
     display: flex;
     justify-content: center;
-    width: 120px;
-    margin-left: 2rem;
+    width: 160px;
+    margin-left: 0.5rem;
     
     .button {
       padding: 0.2em 1.5rem;
@@ -168,7 +40,7 @@
     background: #FFFFFF;
     padding: 20px;
     border-radius: 12px;
-    width: 400px;
+    width: 600px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     color: #333333;
   }
@@ -191,6 +63,7 @@
     background: none;
     border: none;
     font-size: 12px;
+    font-weight: 600;
     margin-left: auto;
     color: #666666;
     cursor: pointer;
@@ -230,6 +103,7 @@
     font-weight: 600;
     color: #333333;
     margin-bottom: 10px;
+    text-align: center;
   }
   
   .bank-details {
@@ -242,14 +116,14 @@
   }
   
   .bank-details .bank-name {
-    font-size: 14px;
+    font-size: 26px;
     font-weight: 600;
     color: #333333;
   }
   
   .bank-details .account-number {
-    font-size: 18px;
-    font-weight: 700;
+    font-size: 16px;
+    font-weight: 800;
     color: #000000;
   }
   
@@ -260,7 +134,7 @@
   }
   
   .bank-details .account-name {
-    font-size: 12px;
+    font-size: 16px;
     color: #666666;
   }
   
