made reference centralized

--- a/src/app/new-transfer/new-transfer.component.html
+++ b/src/app/new-transfer/new-transfer.component.html
@@ -19,7 +19,7 @@
 
           
         <div class="header">
-          <button class="close-button">Ref: 323423242324</button>
+          <button class="close-button">Ref: {{transactionReference}}</button>
         </div>
       
         <div class="payment-details">
