--- a/src/app/new-transfer/new-transfer.component.scss
+++ b/src/app/new-transfer/new-transfer.component.scss
@@ -161,7 +161,7 @@
   }
   
   .confirm-button {
-    background: #FF9800;
+    background: #fcae48;
     color: #FFFFFF;
     border: none;
     border-radius: 8px;
@@ -169,6 +169,9 @@
     font-size: 16px;
     font-weight: 600;
     cursor: pointer;
+    &:hover{
+      background: #f9c888;
+    }
   }
   
   footer {
