--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -89,7 +89,7 @@
       </form>
     </div>
     
-    <div class="verify-info" style="margin-top: 15px;">
+    <div class="verify-info" style="margin: 20px;">
       <small  style="font-size: 0.7rem;">Verify the information is correct</small>
     </div>
   </div>
