--- a/src/app/new-transfer/new-transfer.component.html
+++ b/src/app/new-transfer/new-transfer.component.html
@@ -3,12 +3,12 @@
         <div class="button-group">
           <button class="button" [class.active]="(activeTab$ | async) === 'card'" (click)="navigateToCard()">Card</button>
         </div>
-        <div class="button-group">
+        <!-- <div class="button-group">
           <button class="button" [class.active]="(activeTab$ | async) === 'transfer'" (click)="navigateToTransfer()">Transfer</button>
-        </div>
+        </div> -->
     
         <div class="button-group">
-          <button class="button" [class.active]="(activeTab$ | async) === 'newTransfer'" (click)="navigateToNewTransfer()">New Transfer</button>
+          <button class="button" [class.active]="(activeTab$ | async) === 'newTransfer'" (click)="navigateToNewTransfer()">Transfer</button>
         </div>
       </div>
     <div class="payment-modal">
@@ -32,9 +32,9 @@
           <h5>Transfer to account details below</h5>
           <div class="bank-details">
             <p class="bank-name">{{bankName}}</p>
-            <p class="account-number">{{beneficiaryAccountNumber}}</p>
+            <p class="account-number">{{accountNumber}}</p>
             <p class="account-note">Do not save this account no.!</p>
-            <p class="account-name"><b>Account Name:</b> {{beneficiaryAccountName}}</p>
+            <p class="account-name"><b>Account Name:</b> {{accountName}}</p>
             <p class="expiration">This one-time account expires in <span>{{ formattedTime }}</span></p>
           </div>
           <!-- <button class="ussd-code">Get your bank's USSD code</button> -->
@@ -47,4 +47,7 @@
         <footer>🔒 Secured by NowNow</footer>
       </div>
       
+</div>
+<div *ngIf="isLoading" class="loading-spinner">
+  <div class="spinner"></div>
 </div>
