--- a/src/app/new-transfer/new-transfer.component.html
+++ b/src/app/new-transfer/new-transfer.component.html
@@ -41,7 +41,7 @@
         </div>
       
         <div class="action-button">
-          <button class="confirm-button">I've transferred the money</button>
+          <button class="confirm-button" (click)="submitTransfer()">I've transferred the money</button>
         </div>
       
         <footer>🔒 Secured by NowNow</footer>
