--- a/src/app/otp/otp.component.html
+++ b/src/app/otp/otp.component.html
@@ -36,4 +36,7 @@
       </button>
     </div>
   </div>
+  <div *ngIf="isLoading" class="loading-spinner">
+    <div class="spinner"></div>
+  </div>
   
